[gd_scene load_steps=4 format=3 uid="uid://cunrt8lfgp77y"]

[ext_resource type="Script" path="res://scenes/UI/training_unit_area/training_unit_area.gd" id="1_33nvi"]
[ext_resource type="Texture2D" uid="uid://dq3g2k8okwnte" path="res://assets/monsters/broccoli_icon.png" id="1_vjmnt"]
[ext_resource type="PackedScene" uid="uid://85k45qfqxtfg" path="res://scenes/UI/monster_panel/monster_panel.tscn" id="2_nxv2s"]

[node name="TrainingUnitArea" type="VBoxContainer"]
script = ExtResource("1_33nvi")
monster_panel_scene = ExtResource("2_nxv2s")

[node name="CurrentlyTrainedUnitHBox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CurrentlyTrainedUnitArea" type="Control" parent="CurrentlyTrainedUnitHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="CurrentlyTrainedUnitIcon" type="TextureRect" parent="CurrentlyTrainedUnitHBox/CurrentlyTrainedUnitArea"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("1_vjmnt")

[node name="UnitTrainingProgressBar" type="ProgressBar" parent="CurrentlyTrainedUnitHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
fill_mode = 1

[node name="UpNextUnitIcons" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = -15

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
